--- a/app.json
+++ b/app.json
@@ -17,7 +17,8 @@
       "supportsTablet": true,
       "infoPlist": {
         "NSLocationWhenInUseUsageDescription": "This app needs access to your location to register entries with location data."
-      }
+      },
+      "bundleIdentifier": "com.lucas.schmidt.my-app"
     },
     "android": {
       "adaptiveIcon": {
@@ -26,7 +27,9 @@
       },
       "permissions": [
         "ACCESS_FINE_LOCATION",
-        "ACCESS_COARSE_LOCATION"
+        "ACCESS_COARSE_LOCATION",
+        "android.permission.ACCESS_COARSE_LOCATION",
+        "android.permission.ACCESS_FINE_LOCATION"
       ]
     },
     "web": {
