--- a/app.json
+++ b/app.json
@@ -1,15 +1,15 @@
 {
   "expo": {
-    "name": "my-app",
-    "slug": "my-app",
+    "name": "Ponto Tracker",
+    "slug": "ponto-tracker-app",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
-    "scheme": "myapp",
+    "icon": "./assets/images/ponto-tracker-icon.png",
+    "scheme": "pontotracker",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "splash": {
-      "image": "./assets/images/splash-icon.png",
+      "image": "./assets/images/ponto-tracker-icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -18,11 +18,11 @@
       "infoPlist": {
         "NSLocationWhenInUseUsageDescription": "This app needs access to your location to register entries with location data."
       },
-      "bundleIdentifier": "com.lucas.schmidt.my-app"
+      "bundleIdentifier": "com.lucas.schmidt.ponto-tracker"
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "foregroundImage": "./assets/images/ponto-tracker-icon.png",
         "backgroundColor": "#ffffff"
       },
       "permissions": [
