--- a/ios/myapp/Info.plist
+++ b/ios/myapp/Info.plist
@@ -7,7 +7,7 @@
     <key>CFBundleDevelopmentRegion</key>
     <string>$(DEVELOPMENT_LANGUAGE)</string>
     <key>CFBundleDisplayName</key>
-    <string>my-app</string>
+    <string>Ponto Tracker</string>
     <key>CFBundleExecutable</key>
     <string>$(EXECUTABLE_NAME)</string>
     <key>CFBundleIdentifier</key>
@@ -27,8 +27,8 @@
       <dict>
         <key>CFBundleURLSchemes</key>
         <array>
-          <string>myapp</string>
-          <string>com.lucas.schmidt.my-app</string>
+          <string>pontotracker</string>
+          <string>com.lucas.schmidt.ponto-tracker</string>
         </array>
       </dict>
     </array>
